Gtk: Internationalize file chooser dialog buttons

CL [1] caused the "Close", "Open", and "Cancel" buttons on file chooser dialogs
to always appear in English.  The internationalization of the buttons used to be
done by GTK using GtkStock, but that has been deprecated since GTK 3.10.

The documentation recommends switching out eg. GTK_STOCK_CANCEL with "_Cancel"
[2] (the underscore indicates that Alt+(the next character), in this case Alt+C,
will take the cancel action).  However, this means that the label will always be
in English.

Chrome could try to internationalize the labels ourselves, but it is not always
clear which character the Alt code should correspond to, so this CL switches
back to using the deprecated GtkStock API, guarded by some
G_GNUC_{BEGIN,END}_IGNORE_DEPRECATIONS.

[1] https://crrev.com/4fb93d7b84037667bc3c86b8062df90361d72af6 [formerly c694003c15dc6af21b453febd1463c5394c98c9e]
[2] https://developer.gnome.org/gtk3/stable/gtk3-Stock-Items.html#GTK-STOCK-CANCEL:CAPS

BUG=807372
R=erg

Change-Id: Ie15acc62d48e180cdaf8a852e293a35977aec3d9
Reviewed-on: https://chromium-review.googlesource.com/895864
Reviewed-by: Elliot Glaysher <erg@chromium.org>
Commit-Queue: Thomas Anderson <thomasanderson@chromium.org>
Cr-Commit-Position: refs/heads/master@{#533383}
Former-commit-id: 6156302bb51b12fe42fd79283ecce6e655b666a4